--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,8 @@ $theme-colors: (
   "ieee-black": #000
 );
 
+$font-family-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+
 //bootstrap sass
 @import "node_modules/bootstrap/scss/bootstrap";
 
