--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,8 +3,89 @@ $theme-colors: (
   "ieee-black": #000
 );
 
-$font-family-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+  "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 
 //bootstrap sass
 @import "node_modules/bootstrap/scss/bootstrap";
 
+body{
+  color: #333;
+}
+
+h3.boxed {
+  border-top: 1px solid rgba(0, 102, 153, 0.1) !important;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
+  span {
+    border: 1px solid #069;
+    font-size: 16px;
+    line-height: 26px;
+    height: 28px;
+    margin: 0;
+    padding: 0 15px;
+    text-transform: uppercase;
+    display: inline-block;
+    color: #069 !important;
+    letter-spacing: 1px;
+    position: relative;
+    top: -1px;
+    font-family: "Open Sans Condensed", sans-serif;
+    font-weight: 700;
+    background: #fff !important;
+  }
+}
+
+.banner-wrapper {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0, rgba(0, 102, 153, 0.02) 100%);
+  padding: 0 30px;
+  margin: 0 0 60px;
+  border-bottom: 1px solid rgba(0, 102, 153, 0.1);
+  h4 {
+    font-family: "Open Sans Condensed", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 20px;
+    margin-bottom: 6px;
+    margin-top: 30px;
+  }
+  .banner-wrapper {
+    background: 0 0;
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
+}
+
+.small p {
+  font-size: 14px;
+  line-height: 17px;
+}
+
+.btn {
+  text-shadow: none !important;
+  box-shadow: none !important;
+  background: 0 0 !important;
+  height: 38px;
+  font-size: 14px;
+  line-height: 36px;
+  font-family: "Open Sans Condensed", sans-serif;
+  font-weight: 700;
+  text-align: center;
+  padding: 0 20px;
+  text-transform: uppercase;
+  border-radius: 4px;
+  &.btn-yellow {
+    color: #000 !important;
+    border: 1px solid #d54308 !important;
+    background: #fc3 !important;
+    box-shadow: 0 4px 12px 0 rgba(255, 204, 51, 0.25) !important;
+  }
+  &.btn-primary {
+    color: #fff!important;
+    border: 1px solid #069!important;
+    background: #069!important;
+    box-shadow: 0 4px 12px 0 rgba(0,102,153,.25)!important;
+  }
+}
