--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -89,3 +89,14 @@ h3.boxed {
     box-shadow: 0 4px 12px 0 rgba(0,102,153,.25)!important;
   }
 }
+
+.hello{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80px;
+  div.hehe{
+    height: auto;
+    max-width: 100%;
+  }
+}
