--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,7 +9,7 @@ $font-family-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe 
 //bootstrap sass
 @import "node_modules/bootstrap/scss/bootstrap";
 
-body{
+body {
   color: #333;
 }
 
@@ -40,7 +40,9 @@ h3.boxed {
 .banner-wrapper {
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0, rgba(0, 102, 153, 0.02) 100%);
   padding: 0 30px;
-  margin: 0 0 60px;
+  @include media-breakpoint-up(lg) {
+    margin: 0 0 60px;
+  }
   border-bottom: 1px solid rgba(0, 102, 153, 0.1);
   h4 {
     font-family: "Open Sans Condensed", sans-serif;
@@ -83,19 +85,19 @@ h3.boxed {
     box-shadow: 0 4px 12px 0 rgba(255, 204, 51, 0.25) !important;
   }
   &.btn-primary {
-    color: #fff!important;
-    border: 1px solid #069!important;
-    background: #069!important;
-    box-shadow: 0 4px 12px 0 rgba(0,102,153,.25)!important;
+    color: #fff !important;
+    border: 1px solid #069 !important;
+    background: #069 !important;
+    box-shadow: 0 4px 12px 0 rgba(0, 102, 153, 0.25) !important;
   }
 }
 
-.hello{
+.hello {
   position: absolute;
   top: 0;
   left: 0;
   width: 80px;
-  div.hehe{
+  div.hehe {
     height: auto;
     max-width: 100%;
   }
