--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -37,6 +37,10 @@ h3.boxed {
   }
 }
 
+.boxed-content{
+  margin-top: 25px;
+}
+
 .banner-wrapper {
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0, rgba(0, 102, 153, 0.02) 100%);
   padding: 0 30px;
