--- a/src/components/ExecomMembers/ExecomMembers.scss
+++ b/src/components/ExecomMembers/ExecomMembers.scss
@@ -1,19 +1,19 @@
 @import "src/scss/bootstrap";
 
-@include media-breakpoint-down(sm){
-  .space + .space{
+@include media-breakpoint-down(sm) {
+  .space + .space {
     margin-top: 20px;
   }
 }
-@include media-breakpoint-up(sm){
-  .space + .space + .space + .space{
+@include media-breakpoint-up(sm) {
+  .space + .space + .space + .space {
     margin-top: 20px;
   }
 }
 .member.card {
   margin-top: 60px;
   border-top: #1e73be solid 5px;
-  .showcase{
+  .showcase {
     width: 120px;
     height: 120px;
     margin-top: -60px;
@@ -22,17 +22,28 @@
       // transform: scale(1);
       border: 3px solid #ffffff;
       box-shadow: 0 0 3px 0 rgba(0, 0, 0, 1);
-      // transition: 0.6s;
-      // -webkit-transition: 0.6s;
+      transition: box-shadow 0.6s;
+      -webkit-transition: box-shadow 0.6s;
+      -moz-transition: box-shadow 0.6s;
+      -o-transition: box-shadow 0.6s;
+      -ms-transition: box-shadow 0.6s;
+      &:hover {
+        box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.9);
+        transition: box-shadow 0.6s;
+        -webkit-transition: box-shadow 0.6s;
+        -moz-transition: box-shadow 0.6s;
+        -o-transition: box-shadow 0.6s;
+        -ms-transition: box-shadow 0.6s;
+      }
     }
   }
-  @include media-breakpoint-down(sm){
+  @include media-breakpoint-down(sm) {
     margin-top: 80px;
-    .showcase{
+    .showcase {
       width: 160px;
       height: 160px;
       margin-top: -80px;
-      .showcase-img{
+      .showcase-img {
         min-width: 160px;
       }
     }
