--- a/src/components/PostTags/PostTags.scss
+++ b/src/components/PostTags/PostTags.scss
@@ -1,13 +1,14 @@
 ul.post-tags {
     padding: 0;
-    display: inline-flex;
+    display: flex;
     flex-wrap: wrap;
     list-style: none;
     li{
         margin-right: 10px;
         margin-bottom: 5px;
         .badge{
-            padding: 7px;
+            padding: 5px;
+            font-size: 12px;
         }
     }
 }
