--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,9 @@ $enable-responsive-font-sizes: true;
 
 $theme-colors: (
   "primary": #006699,
+  "danger": #ba0c2f,
+  "success": #006341,
+  "purple": #772583, 
   "ieee-black": #000
 );
 
