--- a/src/components/ExecomMembers/ExecomMembers.scss
+++ b/src/components/ExecomMembers/ExecomMembers.scss
@@ -27,16 +27,16 @@
       -moz-transition: box-shadow 0.6s;
       -o-transition: box-shadow 0.6s;
       -ms-transition: box-shadow 0.6s;
-      @include media-breakpoint-up(lg) {
-        &:hover {
-          box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.9);
-          transition: box-shadow 0.6s;
-          -webkit-transition: box-shadow 0.6s;
-          -moz-transition: box-shadow 0.6s;
-          -o-transition: box-shadow 0.6s;
-          -ms-transition: box-shadow 0.6s;
-        }
-      }
+      // @include media-breakpoint-up(lg) {
+      //   &:hover {
+      //     box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.9);
+      //     transition: box-shadow 0.6s;
+      //     -webkit-transition: box-shadow 0.6s;
+      //     -moz-transition: box-shadow 0.6s;
+      //     -o-transition: box-shadow 0.6s;
+      //     -ms-transition: box-shadow 0.6s;
+      //   }
+      // }
     }
   }
   @include media-breakpoint-down(sm) {
