--- a/src/components/UserLinks/UserLinks.scss
+++ b/src/components/UserLinks/UserLinks.scss
@@ -3,7 +3,7 @@
 .user-links {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    // justify-content: flex-end;
     /* align-items: center; */
     margin: 0 0 0 -22px;
     max-width: 100%;
