--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,16 +1,18 @@
 @import "src/scss/bootstrap";
 
 .footer {
-  background-color: #222222;
-  padding: 58px 0 20px;
   margin-top: 90px;
   line-height: 22px;
   font-size: 12px;
-  color: white;
+  .global-footer {
+    padding: 20px 0 20px;
+    background-color: #222222;
+    color: white;
+  }
 }
 
 .footer-nav {
-  margin: 0 0 46px;
+  margin: 0 0 23px;
   .nav .nav-item {
     a {
       font-family: "Open Sans Condensed";
