--- a/src/components/ExecomMembers/ExecomMembers.scss
+++ b/src/components/ExecomMembers/ExecomMembers.scss
@@ -18,6 +18,7 @@
     height: 120px;
     margin-top: -60px;
     .showcase-img {
+      background-color: whitesmoke;
       min-width: 120px;
       // transform: scale(1);
       border: 3px solid #ffffff;
